--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "csci3100-backend",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -34,5 +33,6 @@
     "@types/express": "^4.17.21",
     "@types/node": "^20.11.19",
     "typescript": "^5.3.3"
-  }
+  },
+  "description": ""
 }
